# prometheus-qbittorrent-exporter

./: .coveragerc  .dockerignore  .gitignore  .pdm-python  .pre-commit-config.yaml  Dockerfile  README.md  config.env.example  data.json  endpoint.json  pyproject.toml  renovate.json  setup.py
.github/: dependabot.yml
.github/workflows/: docker.yml  lint.yml  pythonpublish.yml
grafana/: README.md  dashboard-immich.json  dashboard.json  immich-exporter-dashboard.json
htmlcov/: class_index.html  d_6abd174c694c1177_exporter_py.html  function_index.html  index.html  status.json  z_6abd174c694c1177_exporter_py.html
immich_exporter/: exporter.py
qbittorrent_exporter/: exporter.py
tests/: exporter_test.py  metric_test.py
unraid/: prometheus-immich-exporter.xml
