[project]
name = "prometheus-qbittorrent-exporter"
version = "1.5.1"
description = "Prometheus exporter for qbittorrent"
authors = [
    {name = "Esteban Sanchez", email = "esteban.sanchez@gmail.com"},
]
dependencies = [
    "prometheus-client>=0.20.0",
    "python-json-logger>=2.0.7",
    "qbittorrent-api>=2024.5.62",
]
requires-python = ">=3.11"
readme = "README.md"
keywords = ["prometheus", "qbittorrent"]
license = {text = "GPL-3.0"}
classifiers = []

[project.urls]
Homepage = "https://github.com/esanchezm/prometheus-qbittorrent-exporter"
Downloads = "https://github.com/esanchezm/prometheus-qbittorrent-exporter/archive/1.5.1.tar.gz"

[project.scripts]
qbittorrent-exporter = "qbittorrent_exporter.exporter:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.1",
    "isort>=5.13.2",
    "black>=24.4.2",
    "coverage>=7.5.3",
]
